Update to "archivio_scalia.html"
Fix an issue due to the link with the css.

--- a/archivio_scalia.html
+++ b/archivio_scalia.html
@@ -10,7 +10,7 @@
 
 	-->
 
-	<link rel="stylesheet" type="text/css" href="/Users/QuartierGeneraleWhoop/Desktop/archivio_scalia/style/stile.css">
+	<link rel="stylesheet" type="text/css" href="/style/stile.css">
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,11 +30,11 @@
 		<br>
 		<br>
 
-		<a href="/Users/QuartierGeneraleWhoop/Desktop/archivio_scalia/data/antenore.pdf" download="antenore.pdf" class="link">
+		<a href="/data/antenore.pdf" download="antenore.pdf" class="link">
 			<button class="bottoni1a">La kore di Antenore</button>
 		</a>
 
-		<a href="/Users/QuartierGeneraleWhoop/Desktop/archivio_scalia/data/la_plastica.pdf" download="la_plastica.pdf" class="link">
+		<a href="/data/la_plastica.pdf" download="la_plastica.pdf" class="link">
 			<button class="bottoni2a">La plastica</button>
 		</a>
 
@@ -42,11 +42,11 @@
 		<br>
 		<br>
 
-		<a href="/Users/QuartierGeneraleWhoop/Desktop/archivio_scalia/data/il_carbonio.pdf" download="il_carbonio.pdf" class="link">
+		<a href="/data/il_carbonio.pdf" download="il_carbonio.pdf" class="link">
 			<button class="bottoni1a">Il carbonio</button>
 		</a>
 
-		<a href="/Users/QuartierGeneraleWhoop/Desktop/archivio_scalia/data/la_scala_di_milano.pdf" download="la_scala_di_milano.pdf" class="link">
+		<a href="/data/la_scala_di_milano.pdf" download="la_scala_di_milano.pdf" class="link">
 			<button class="bottoni2a">La Scala di Milano</button>
 		</a>
 
@@ -54,11 +54,11 @@
 		<br>
 		<br>
 
-		<a href="/Users/QuartierGeneraleWhoop/Desktop/archivio_scalia/data/il_legno.pdf" download="il_legno.pdf" class="link">
+		<a href="/data/il_legno.pdf" download="il_legno.pdf" class="link">
 			<button class="bottoni1a">Il legno</button>
 		</a>
 
-		<a href="/Users/QuartierGeneraleWhoop/Desktop/archivio_scalia/data/le_etichette.pdf" download="le_etichette.pdf" class="link">
+		<a href="/data/le_etichette.pdf" download="le_etichette.pdf" class="link">
 			<button class="bottoni2a">Le etichette</button>
 		</a>
 
@@ -66,7 +66,7 @@
 		<br>
 		<br>
 
-		<a href="/Users/QuartierGeneraleWhoop/Desktop/archivio_scalia/data/il_vetro.pdf" download="il_vetro.pdf" class="link">
+		<a href="/data/il_vetro.pdf" download="il_vetro.pdf" class="link">
 			<button class="bottoni1a">Il vetro</button>
 		</a>
 
@@ -78,7 +78,7 @@
 		<br>
 		<br>
 
-		<a href="/Users/QuartierGeneraleWhoop/Desktop/archivio_scalia/data/l_arte_greca.pdf" download="l_arte_greca.pdf" class="link">
+		<a href="/data/l_arte_greca.pdf" download="l_arte_greca.pdf" class="link">
 		<button class="bottoni1a">L'arte greca</button>
 		</a>
 
@@ -88,7 +88,7 @@
 		<br>
 		<br>
 
-		<a href="/Users/QuartierGeneraleWhoop/Desktop/archivio_scalia/data/la_baia_di_new_york.pdf" download="la_baia_di_new_york.pdf" class="link">
+		<a href="/data/la_baia_di_new_york.pdf" download="la_baia_di_new_york.pdf" class="link">
 		<button class="bottoni1a">La Baia di New York</button>
 		</a>
 
@@ -98,9 +98,9 @@
 		<br>
 		<br>
 
-		<a href="/Users/QuartierGeneraleWhoop/Desktop/archivio_scalia/data/la_carta.pdf" download="la_carta.pdf" class="link">
+		<a href="/data/la_carta.pdf" download="la_carta.pdf" class="link">
 		<button class="bottoni1a">La carta</button>
-	    </a>
+	    	</a>
 
 		<button class="bottoni2a">14</button>
 		
